apps/world-clock/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world-clock
  namespace: world-clock
  labels:
    app.kubernetes.io/name: world-clock
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: world-clock
  template:
    metadata:
      labels:
        app.kubernetes.io/name: world-clock
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: world-clock
          image: "ghcr.io/jcwearn/world-clock:v0.4.65@sha256:6906add2fbf668f49fef08f8a8ea4a4da251960f861ac503399b30e375984467"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
