apps/world-clock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: world-clock
  namespace: world-clock
  labels:
    app.kubernetes.io/name: world-clock
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: world-clock
